# cmd/api/users.go
@@ -35,79 +35,6 @@ func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// FollowUser godoc
-//
-//	@Summary		Follows a user
-//	@Description	Follows a user by ID
-//	@Tags			users
-//	@Accept			json
-//	@Produce		json
-//	@Param			userID	path		int		true	"User ID"
-//	@Success		204		{string}	string	"User followed"
-//	@Failure		400		{object}	error	"User payload missing"
-//	@Failure		404		{object}	error	"User not found"
-//	@Security		ApiKeyAuth
-//	@Router			/users/{userID}/follow [put]
-func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
-	followerUser := getUserFromContext(r)
-
-	followedID, err := uuid.Parse(chi.URLParam(r, "userID"))
-	if err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-
-	ctx := r.Context()
-
-	if err := app.store.Followers.Follow(ctx, followerUser.ID, followedID); err != nil {
-		switch err {
-		case store.ErrConflict:
-			app.conflictResponse(w, r, err)
-			return
-		default:
-			app.internalServerError(w, r, err)
-			return
-		}
-	}
-
-	if err := app.jsonResponse(w, http.StatusNoContent, nil); err != nil {
-		app.internalServerError(w, r, err)
-	}
-}
-
-// UnfollowUser gdoc
-//
-//	@Summary		Unfollow a user
-//	@Description	Unfollow a user by ID
-//	@Tags			users
-//	@Accept			json
-//	@Produce		json
-//	@Param			userID	path		int		true	"User ID"
-//	@Success		204		{string}	string	"User unfollowed"
-//	@Failure		400		{object}	error	"User payload missing"
-//	@Failure		404		{object}	error	"User not found"
-//	@Security		ApiKeyAuth
-//	@Router			/users/{userID}/unfollow [put]
-func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
-	followerUser := getUserFromContext(r)
-
-	unfollowedID, err := uuid.Parse(chi.URLParam(r, "userID"))
-	if err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-	ctx := r.Context()
-
-	if err := app.store.Followers.Unfollow(ctx, followerUser.ID, unfollowedID); err != nil {
-		app.internalServerError(w, r, err)
-		return
-	}
-
-	if err := app.jsonResponse(w, http.StatusNoContent, nil); err != nil {
-		app.internalServerError(w, r, err)
-	}
-}
-
 // ActivateUser godoc
 //
 //	@Summary		Activates/Register a user
