# docs/swagger.yaml
@@ -1,21 +1,5 @@
 basePath: /v1
 definitions:
-  main.CreatePostPayload:
-    properties:
-      content:
-        maxLength: 1000
-        type: string
-      tags:
-        items:
-          type: string
-        type: array
-      title:
-        maxLength: 100
-        type: string
-    required:
-    - content
-    - title
-    type: object
   main.CreateUserTokenPayload:
     properties:
       email:
@@ -46,15 +30,6 @@ definitions:
     - password
     - username
     type: object
-  main.UpdatePostPayload:
-    properties:
-      content:
-        maxLength: 1000
-        type: string
-      title:
-        maxLength: 100
-        type: string
-    type: object
   main.UserWithToken:
     properties:
       created_at:
@@ -73,77 +48,6 @@ definitions:
         type: string
       username:
         type: string
-    type: object
-  store.Comment:
-    properties:
-      content:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      post_id:
-        type: integer
-      user:
-        $ref: '#/definitions/store.User'
-      user_id:
-        type: integer
-    type: object
-  store.Post:
-    properties:
-      comments:
-        items:
-          $ref: '#/definitions/store.Comment'
-        type: array
-      content:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      tags:
-        items:
-          type: string
-        type: array
-      title:
-        type: string
-      updated_at:
-        type: string
-      user:
-        $ref: '#/definitions/store.User'
-      user_id:
-        type: string
-      version:
-        type: integer
-    type: object
-  store.PostWithMetadata:
-    properties:
-      comments:
-        items:
-          $ref: '#/definitions/store.Comment'
-        type: array
-      comments_count:
-        type: integer
-      content:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      tags:
-        items:
-          type: string
-        type: array
-      title:
-        type: string
-      updated_at:
-        type: string
-      user:
-        $ref: '#/definitions/store.User'
-      user_id:
-        type: string
-      version:
-        type: integer
     type: object
   store.Role:
     properties:
@@ -286,136 +190,6 @@ paths:
       summary: Healthcheck
       tags:
       - ops
-  /posts:
-    post:
-      consumes:
-      - application/json
-      description: Creates a post
-      parameters:
-      - description: Post payload
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/main.CreatePostPayload'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/store.Post'
-        "400":
-          description: Bad Request
-          schema: {}
-        "401":
-          description: Unauthorized
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Creates a post
-      tags:
-      - posts
-  /posts/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a post by ID
-      parameters:
-      - description: Post ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Deletes a post
-      tags:
-      - posts
-    get:
-      consumes:
-      - application/json
-      description: Fetches a post by ID
-      parameters:
-      - description: Post ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/store.Post'
-        "404":
-          description: Not Found
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Fetches a post
-      tags:
-      - posts
-    patch:
-      consumes:
-      - application/json
-      description: Updates a post by ID
-      parameters:
-      - description: Post ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Post payload
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/main.UpdatePostPayload'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/store.Post'
-        "400":
-          description: Bad Request
-          schema: {}
-        "401":
-          description: Unauthorized
-          schema: {}
-        "404":
-          description: Not Found
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Updates a post
-      tags:
-      - posts
   /users/{id}:
     get:
       consumes:
@@ -448,64 +222,6 @@ paths:
       summary: Fetches a user profile
       tags:
       - users
-  /users/{userID}/follow:
-    put:
-      consumes:
-      - application/json
-      description: Follows a user by ID
-      parameters:
-      - description: User ID
-        in: path
-        name: userID
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: User followed
-          schema:
-            type: string
-        "400":
-          description: User payload missing
-          schema: {}
-        "404":
-          description: User not found
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Follows a user
-      tags:
-      - users
-  /users/{userID}/unfollow:
-    put:
-      consumes:
-      - application/json
-      description: Unfollow a user by ID
-      parameters:
-      - description: User ID
-        in: path
-        name: userID
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: User unfollowed
-          schema:
-            type: string
-        "400":
-          description: User payload missing
-          schema: {}
-        "404":
-          description: User not found
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Unfollow a user
-      tags:
-      - users
   /users/activate/{token}:
     put:
       description: Activates/Register a user by invitation token
@@ -533,60 +249,6 @@ paths:
       summary: Activates/Register a user
       tags:
       - users
-  /users/feed:
-    get:
-      consumes:
-      - application/json
-      description: Fetches the user feed
-      parameters:
-      - description: Since
-        in: query
-        name: since
-        type: string
-      - description: Until
-        in: query
-        name: until
-        type: string
-      - description: Limit
-        in: query
-        name: limit
-        type: integer
-      - description: Offset
-        in: query
-        name: offset
-        type: integer
-      - description: Sort
-        in: query
-        name: sort
-        type: string
-      - description: Tags
-        in: query
-        name: tags
-        type: string
-      - description: Search
-        in: query
-        name: search
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/store.PostWithMetadata'
-            type: array
-        "400":
-          description: Bad Request
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Fetches the user feed
-      tags:
-      - feed
 securityDefinitions:
   ApiKeyAuth:
     in: header
